--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -125,6 +125,16 @@
 	Organization = {Apache},
 }
 
+@misc{yarnapache,
+	Author = {Hadoop Apache},
+	Title = {YARN Architecture},
+	URL = {http://hadoop.apache.org/docs/current/hadoop-yarn/hadoop-yarn-site/YARN.html},
+	Note = {Acessado no dia 13 de maior de 2016},
+	Year = {2016},
+	Month = {Maio},
+	Organization = {Apache},
+}
+
 
 @techreport{pontes2011,
 	Author = {Taís Furtado Pontes},
@@ -222,6 +232,24 @@
 	Pages = {149-167},
 	Volume = {3},
 	Booktitle = {Numerical Heat Transfer},
+}
+
+@inproceedings{vavilapalli2013,
+	 Author = {Vavilapalli, Vinod Kumar and Murthy, Arun C. and Douglas, Chris and Agarwal, Sharad and Konar, Mahadev and Evans, Robert and Graves, Thomas and Lowe, Jason and Shah, Hitesh and Seth, Siddharth and Saha, Bikas and Curino, Carlo and O'Malley, Owen and Radia, Sanjay and Reed, Benjamin and Baldeschwieler, Eric},
+	 Title = {Apache Hadoop YARN: Yet Another Resource Negotiator},
+	 Booktitle = {Proceedings of the 4th Annual Symposium on Cloud Computing},
+	 Series = {SOCC '13},
+	 Year = {2013},
+	 ISBN = {978-1-4503-2428-1},
+	 Location = {Santa Clara, California},
+	 Pages = {5:1--5:16},
+	 Articleno = {5},
+	 Numpages = {16},
+	 URL = {http://doi.acm.org/10.1145/2523616.2523633},
+	 DOI = {10.1145/2523616.2523633},
+	 ACMID = {2523633},
+	 Publisher = {ACM},
+	 Address = {New York, NY, USA},
 }
 
 @article{clark1986,
